# cidmol

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  GitDoxyfile  allocs_8cpp_source.html  annotated.html  annotated_dup.js  astClone_8cpp_source.html  astComp_8cpp_source.html  astFwd_8cpp_source.html  astImpl_8cpp_source.html  astModule_8cpp_source.html  astVerify_8cpp_source.html  ast_8cpp_source.html  builtins_8cpp_source.html  classcore_1_1ExecutionFutex-members.html  classcore_1_1ExecutionFutex.html  classcore_1_1ExecutionFutex.js  classcore_1_1FdStream-members.html  classcore_1_1FdStream.html  classcore_1_1FdStream__inherit__graph.map  classcore_1_1FdStream__inherit__graph.md5  classcore_1_1FileStream-members.html  classcore_1_1FileStream.html  classcore_1_1FileStream__inherit__graph.map  classcore_1_1FileStream__inherit__graph.md5  classcore_1_1Function-members.html  classcore_1_1Function.html  classcore_1_1Function.js  classcore_1_1Function_1_1InvokeResultBase-members.html  classcore_1_1Function_1_1InvokeResultBase.html  classcore_1_1Function__coll__graph.map  classcore_1_1Function__coll__graph.md5  classcore_1_1Logger-members.html  classcore_1_1Logger.html  classcore_1_1Logger__coll__graph.map  classcore_1_1Logger__coll__graph.md5  classcore_1_1LogicalResult-members.html  classcore_1_1LogicalResult.html  (+1217 more)
.github/workflows/: check-and-build.yml  deploy.yml
dockerfiles/cidmol-build/: Dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+22 more)
src/: CMakeLists.txt  main.cpp
src/ast/: ast.cpp  astClone.cpp  astComp.cpp  astFwd.cpp  astImpl.cpp  astModule.cpp  astVerify.cpp  symbolTable.cpp  symbolTableImpl.cpp  tokens.cpp
src/compiler/frontend/: lexer.cpp  parser.cpp
src/core/: CMakeLists.txt  allocs.cpp  core.cpp  demangler.cpp  elf64.cpp  errors.cpp  functions.cpp  initializerList.cpp  ioUtils.cpp  logger.cpp  logicalResult.cpp  map.cpp  multiset.cpp  mutex.cpp  pair.cpp  set.cpp  sharedPtr.cpp  start.cpp  stream.cpp  string.cpp  stringLiteral.cpp  syscalls.cpp  threads.cpp  traits.cpp  uniquePtr.cpp  variant.cpp  vector.cpp  zip.cpp
src/gssa/: gssa.cpp  gssaCore.cpp
tests/examples/: ex1.cidmol
